# ChangeLog for media-libs/gst-plugins-base
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gst-plugins-base/ChangeLog,v 1.157 2011/02/24 06:32:41 leio Exp $

*gst-plugins-base-0.10.32 (24 Feb 2011)

  24 Feb 2011; Mart Raudsepp <leio@gentoo.org>
  +gst-plugins-base-0.10.32.ebuild:
  Version bump. Don't build examples as they aren't installed, avoids issues
  like bug 348623 too. Has new encodebin element as a playbin2 alike
  convenience aggregate element, but for encoding instead of playback for
  the benefit of encoding/transcoding applications once they port to it;
  encode profile system to go along with it to have 'profiles' of encoding
  targets. Many other improvements and bug fixes

  20 Feb 2011; Markus Meier <maekke@gentoo.org>
  gst-plugins-base-0.10.31.ebuild:
  arm stable, bug #353434

  14 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gst-plugins-base-0.10.31.ebuild:
  x86 stable wrt bug #353434

  11 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
  gst-plugins-base-0.10.31.ebuild:
  Stable on amd64 wrt bug #353434

  07 Feb 2011; Mart Raudsepp <leio@gentoo.org>
  +files/gst-plugins-base-0.10.31-fix-tag-test-linking.patch,
  gst-plugins-base-0.10.31.ebuild:
  Fix tests when ran during upgrade from a previous version, bug 352944

  07 Feb 2011; Mart Raudsepp <leio@gentoo.org>
  gst-plugins-base-0.10.31.ebuild:
  QA: Remove unnecessary build dependency

*gst-plugins-base-0.10.31 (12 Jan 2011)

  12 Jan 2011; Arun Raghavan <ford_prefect@gentoo.org>
  +gst-plugins-base-0.10.31.ebuild:
  Bump to 0.10.31. Adds new API for metadata discovery, codec info extraction,
  and lots of fixes.

  22 Nov 2010; Arun Raghavan <ford_prefect@gentoo.org>
  gst-plugins-base-0.10.30.ebuild:
  Enable the introspection flag by default. Doesn't really affect anyone
  yet, since the USE flag is masked.

  22 Nov 2010; Arun Raghavan <ford_prefect@gentoo.org>
  gst-plugins-base-0.10.30.ebuild,