@@ -1,19 +1,11 @@
 AUX gst-plugins-base-0.10.29-make-382.patch 809 RMD160 7132846d5f443f77bb48492d37857561922dea36 SHA1 2f61489ff083033ed4abc4e05c91293c9cf3a896 SHA256 c0310244fe8532218051f0a670a9729aa7c4b39f68ac908f3469e02f4916b121
 AUX gst-plugins-base-0.10.30-fix-tag-test-linking.patch 595 RMD160 36ab82ec95e0bb30a7bebd87d8f3df29ee279475 SHA1 d02e4885dd3940c5ded49c0481ea09251c5f9cab SHA256 cc614508e47ef766aafafaed74f82491e69cfdf5ef02be33dfcdca46cd74e700
 AUX gst-plugins-base-0.10.31-fix-tag-test-linking.patch 995 RMD160 5297f347af2ea316364029d87fdf0f57ef6ac8a7 SHA1 6f2dd634432dbaabef96f984ac3acbc6f8aaf8b2 SHA256 1cc80eabcf54420b12b3bc8d0eb74079b0cf4185043979f0f8f59bb18882c29f
-DIST gst-plugins-base-0.10.24.tar.bz2 2199169 RMD160 3d85ee63e0b0a27eb50b5654dc2bd96c60bcf94f SHA1 01abe0839303923671e79d8448ebfabda5bce799 SHA256 6f566e8ce0911e0fae99dc7435c3fc3a14d0253578a88e87a28c0e2584372761
-DIST gst-plugins-base-0.10.25.tar.bz2 2241145 RMD160 4d57f4c6e42a4bf006c1dff9d69c0bbc9bcde483 SHA1 6057e6552c936f3dbe9ba01269bc0bcf8469ae0a SHA256 0ab2f7e1d818e7af1be99c4eae02ba69d4a1b8f7e3527929a6426f1daa0d4607
-DIST gst-plugins-base-0.10.28.tar.bz2 2343870 RMD160 e013a996af99b6be42ece624f279f3f76fe5a30f SHA1 c32b966e4ec3c81d520f80a03794cb11942df835 SHA256 132b6fd7749fcbfa9ad88c854aada44b6870c4175bda21cdb01a52b59a98e14f
 DIST gst-plugins-base-0.10.29.tar.bz2 2351477 RMD160 7ade1abdd56201fb10c4e19f3507f91298b760e7 SHA1 22a96d2d4dfbd3c980e3337db6e6c1d06fb0841a SHA256 ac035cce4d68e2e0b980d3ddb6c74674667cbfde6cddc65e18ea16368d34732c
-DIST gst-plugins-base-0.10.30.tar.bz2 2455042 RMD160 69dc0be92144f343fee772e6999caff4d94ebb7f SHA1 17170bb23278c87bb3f4b299a3e7eaeed178bd31 SHA256 63938641380be9935c804ae8d55acdcfd93920ed2deb72dcf70f027a78b085d7
 DIST gst-plugins-base-0.10.31.tar.bz2 2644897 RMD160 06fe1e41904404f7502ee849efb58e80e022f3b8 SHA1 a22d944adc6f27f8dc629d868fe15d4ce3aa4096 SHA256 abb006c78222cfb69d31e983268d1d5219e9d4e0da24c6c4cd687968af7a33bd
 DIST gst-plugins-base-0.10.32.tar.bz2 2720103 RMD160 b267e3138e40e3646efed0baa662d40775eca1ea SHA1 c1c149272b7ab6cbe5f648532f74525c6541eea5 SHA256 e9aabfac83f6480896da0686e9c911989f896fbad634821b7771ed84a446172b
-EBUILD gst-plugins-base-0.10.24.ebuild 1098 RMD160 5fb42a7e2e966c33e1da92fd0d604bc13bd4166c SHA1 30205a65b4ac2fb292bae75089bb22fdb45e7247 SHA256 00052188d2cff31f1d5fc17667d398018abbcf730f0aead72093453663db29a5
-EBUILD gst-plugins-base-0.10.25.ebuild 1248 RMD160 cdf946d55729783d214025102753be99b2ab435e SHA1 a7f9b0be58e9688e4af1d06032e562a06860bf9c SHA256 f4c7abb024c29583c2521834f4945234964c6424cbbfed8edea5a88a36e8340e
-EBUILD gst-plugins-base-0.10.28.ebuild 1290 RMD160 692d4c43be8c3bd2762b6f7e13269dd09e30e5ff SHA1 4f6045acbb864f10a35728c2ffa3f13bcaa094b1 SHA256 8178266c35a12f315cfbe87a87afd82c80410a49f8dd14ba2ab98df21308d8cc
 EBUILD gst-plugins-base-0.10.29.ebuild 1442 RMD160 8682646c8c8bab5be9d396e0521a0e60fea434cb SHA1 8d221f5eb66f41c901a317c927825c5b96c41888 SHA256 56263a94a974b3d0254d4a1235347d5067ab16c915e5f96ea401080b7ae2c72f
-EBUILD gst-plugins-base-0.10.30.ebuild 1614 RMD160 64416d6ddfc9c4071446a1c82114610186004fd0 SHA1 2b67c5c825ebad1b600e4eabdaaf988096d4a1f9 SHA256 9570ab78318dda3fa2314f0e71537193fed02f30ab9c0de901cedb07ff64b911
 EBUILD gst-plugins-base-0.10.31.ebuild 1523 RMD160 6d1769902fc0c1dbd408dbc8f3fa43ca24487b6a SHA1 9688c8988805c9f2c05502ac19dad91a9ac9d3a1 SHA256 b599672658c416726cc89783df1ea0ff081c41daf26a7e95e54e1752c45193b9
 EBUILD gst-plugins-base-0.10.32.ebuild 1556 RMD160 de1ff8794927bca63dae24eb25c80412691a3e18 SHA1 8f4107551a1041b0c486cae575814271600aefe5 SHA256 59eb1c1c992c7a988709d990f74c5e10174f09c06cd2fada937f98ee73e00754
-MISC ChangeLog 22515 RMD160 8724942cb9722ba443ebaa87f4e8b1a790f415a7 SHA1 474f1ceffeeeb89a421f90f57bc02f4af97eb898 SHA256 57a8871b8607d540d92b36512fe2b62cc643aebd1dcd5cdbd3e96329f9f0ce8c
-MISC metadata.xml 387 RMD160 317c227ba3fb1b6c3efb9b7e2eda3bc8b3a15d3d SHA1 22e7a8bf1c0fea96175f24186d2da21991f92d57 SHA256 eba3a8e340ab40138d81acf190309b4071059513460cb93109b24574c794e205
+MISC ChangeLog 22784 RMD160 c96e8d399198b67353e9b8c312a8186f68ee0f50 SHA1 82fe0572862a91dd34ed6ac17ef966c07fb352b8 SHA256 1215c13ca254692bc1443212ad8670ea68f427988e4985541ddebcca95b93a51
+MISC metadata.xml 367 RMD160 414d9e853e2498b2f32a9b666bfaaba9ceb796c3 SHA1 8a5923839a5f261da244c64146bb7be10af7e787 SHA256 9d6d2f0475cebfa4ec7520e3e5f8dd8e825ddcfda317282174ec9528a9c169f3
