@@ -1,17 +1,8 @@
-AUX gstreamer-0.10.30-make-382.patch 809 RMD160 f0aa973077d97ef17a7250392398e0aeee11fe33 SHA1 b949b2d466e560b44502b5bc9d44974d336cf3fa SHA256 fffa3cbf4935310681160b0c2c9d5b938b229484ac4fd8b3f56e5b03a865f4cd
-DIST gstreamer-0.10.24.tar.bz2 2982027 RMD160 f77e4d1585567c0e4dd61c1301ba2032b2a04177 SHA1 bb93174f1c19560e119092a16e8acc3a905b6bb4 SHA256 ee8e22ff368333e668904133b40622702a1c687872e8ee5e06df9a5aad71963c
-DIST gstreamer-0.10.25.tar.bz2 3045572 RMD160 79f0d117f46d4138acb35fac6594a7aeba4c4a7e SHA1 e3cda2dcac9dbbfc2e61ba79fcd3bff1313dc7f4 SHA256 39b2ba7b3bfa8df6d998a9461e7091c27757e36a53e93969d7d9982a56526578
-DIST gstreamer-0.10.28.tar.bz2 3165971 RMD160 511ef38706447740803912de47c534fd291915cf SHA1 a1123d60c35c9be1f6f6357176056361f42e896b SHA256 61613ec7574d22230e8cc893f91b66faec6b21288a22d2f21c9d9eeb7667eb2c
 DIST gstreamer-0.10.29.tar.bz2 3257099 RMD160 c5b71e4f9c3c77305c92c242b44820521c88ee89 SHA1 8d218f4b04445a7dc388d6466c10efb8f23d2468 SHA256 e44a737c016ccab56d646718ecf24b9393babde2c417ac7dd5bd218e5c609ef9
-DIST gstreamer-0.10.30.tar.bz2 3322723 RMD160 7f34cdf7c4c00b7d04a2338a059d8d39cbbc635d SHA1 23e3698dbefd5cfdfe3b40a8cc004cbc09e01e69 SHA256 e8ef301be423797ff36a0bb3615930b112b4175634051d19fd655e0ed974532a
 DIST gstreamer-0.10.31.tar.bz2 3441639 RMD160 a7ebb114246ea5d6ef67a76077e52f1f86780b24 SHA1 b3545d89418083cce9395475ac5935887869b40c SHA256 7f737e6d047c1ebeb4e1e0725fc377c5d9f12ee89186de7960be3cbba709ab84
 DIST gstreamer-0.10.32.tar.bz2 3529980 RMD160 447fa2b8b4c622a628763805cb65006d54919e54 SHA1 95477044ed23cf94669e56ea43607de05c2a0cb3 SHA256 3bf4e46a186ee9a1f5e212aaf651d67cffb4f5f05345a7c99ae71d5d992be133
-EBUILD gstreamer-0.10.24.ebuild 1532 RMD160 09c959861d6b2770a2327f6871981d6ff2c408c7 SHA1 75e94d7b44bd88a2eadc44a39f3bd7f9b5f1ff43 SHA256 26e4cca78e0ebc71f569e37adf88d4ff7c0162cd8e4a5fa27ba7ce10e13927dc
-EBUILD gstreamer-0.10.25.ebuild 1553 RMD160 e085a9aae64cd15e701f5f03e49cb862a4fe6c46 SHA1 c629c6bf201c498760333109ba962f6a54a500af SHA256 5eb73e883f4ac15180545719a0fcebe89ad41ee7f1785e9066910e5ce361967b
-EBUILD gstreamer-0.10.28.ebuild 1716 RMD160 5dc4642c5f117cc3d524ed582e035fec69ee7030 SHA1 52e40828cc60d30db66bd50693cfb3c1036e0f82 SHA256 422549cb20335fc240121518a5a8b6ce0ff39ae00a6d1a5acbef9b08856611c4
 EBUILD gstreamer-0.10.29.ebuild 1714 RMD160 87a50fb96e5448eb0011342cab5ebe3b7214e389 SHA1 e6b7f2c65ae7ca9af5dd93131d3a7a664de5ff30 SHA256 92e84be3eebac3b777f2c89cca4f4ea0376a5028bca7046c45135423c460a4b8
-EBUILD gstreamer-0.10.30.ebuild 1910 RMD160 d9c628aa74d8a5a3c72f80e37eecefd7a10fb5b3 SHA1 2a0cf180ae3fdb4f47c77925835b04a608bcfb60 SHA256 3c4e6c87f8338dd3de4bd8aebe848c36f3137240e5aa82d917c9e7df306c5db3
 EBUILD gstreamer-0.10.31.ebuild 1848 RMD160 a55b5052faf3fc3bc171ba9739b65728d159c719 SHA1 9762be68442cbbadf63ad818ea1c94bc42c6c49a SHA256 c13c39e3164ac08489255bc321b76cc853bfcef6b9fa44e18ec160f70025814e
 EBUILD gstreamer-0.10.32.ebuild 1849 RMD160 1d21e697167d39b863556765ea704bf66885f041 SHA1 e49bde497b352de277464e90677f38aa06d6dd5d SHA256 11b055e0d5265fd1668b411c61d9ce6db92b9bcbab14af528f9c8669d2aab396
-MISC ChangeLog 36958 RMD160 e9946f4e28b6442ebea1d575005f62f19346ab25 SHA1 bf40658d7ef808474dfe410161487518aa5b7f28 SHA256 48c24b1a47cfb7b735bfb91bbf34cc191e1f0c8f81830f302357be27a7779733
+MISC ChangeLog 37174 RMD160 9b0085328ccf3c2e70db9969050f9d8ef2380be7 SHA1 b1a029a6357b869ee22aec10e8f4c4b5c8b2badf SHA256 adee96d43cb2f78c0d2d019b86fa3532ce64f58e6bc7cc779b98c52eb8bc8f32
 MISC metadata.xml 281 RMD160 b7eaf39e8223495db6415a01dbe171fa7e0e0336 SHA1 ce7c21f9b9b2db8fdc72ca1406464cd513a1dd37 SHA256 cc5d9611f69fa72b3f8343018cd16fa524706c336ff7b436ebb9bbffc3c40090
